# bio-block

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYBRID_ARCHITECTURE.md  PR_DESCRIPTION_FACTORY_PATTERN.md  PR_READY.md  README.md  SECURITY.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  config-validation.yml  frontend-build.yml  frontend-lint.yml  js-backend-ci.yml  labeler.yml  prettier.yml  python-backend-ci.yml  security-audit.yml  test-coverage.yml  test.yml
.husky/: pre-commit
javascript_backend/: .env.example  .eslintrc.json  .gitignore  .nycrc.json  package-lock.json  package.json  server.js
javascript_backend/.husky/: pre-commit
javascript_backend/.nyc_output/: 482fe50a-6e6e-4712-a1da-224d7fb3c634.json
nextjs-frontend/: .env.example  .gitignore  MIGRATION.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
prototype/: .gitignore  hardhat.config.js  package-lock.json  package.json
prototype/src/: App.js  (+8 more)
python_backend/: .env.example  WSI_SETUP_INSTRUCTIONS.md  advanced_anonymizer.py  main.py  pyproject.toml  requirements.txt  setup_openslide.ps1
python_backend/services/: audit_logger.py  audit_models.py
python_backend/services/preview/: __init__.py  base.py  dicom_generator.py  factory.py  image_generator.py  nifti_generator.py  wsi_generator.py
python_backend/tests/: test_advanced_anonymizer.py  test_api.py  test_audit_logger.py
(+66 files in other folders)
