[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "chromadb>=1.5.5",
    "en-core-web-sm",
    "en-core-web-lg",
    "eth-account>=0.13.7",
    "fastapi>=0.135.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "img2pdf>=0.6.3",
    "isort>=8.0.1",
    "nibabel>=5.4.2",
    "numpy<2.0.0",
    "opencv-python<4.10.0",
    "openslide-python>=1.4.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "presidio-image-redactor>=0.0.56",
    "pydicom>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "spacy>=3.7.5",
    "uvicorn[standard]>=0.42.0",
    "coverage>=7.13.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl" }
